# myAoC_2021

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeSettings.json  README.md  build.bat  cppcheck_suppressions.txt
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
cmake/: Conan.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
include/MyAoC_2021/: Solution_1_1.h
include/MyAoC_2021/solutions/: Solution_10_1.h  Solution_1_1.h  Solution_1_2.h  Solution_2_1.h  Solution_2_2.h  Solution_3_1.h  Solution_3_2.h  Solution_4_1.h  Solution_4_2.h  Solution_5_1.h  Solution_5_2.h  Solution_6_2.h  Solution_7_1.h  Solution_7_2.h  Solution_8_2.h  Solution_9_1.h  Solution_9_2.h
include/MyAoC_2021/utils/: Constants.h  Coordinates.h  StringSplit.h  myConcepts.h  myMath.h  utils.h
src/: Solution_1_1.cpp  main.cpp
src/solutions/: Solution_10_1.cpp  Solution_10_2.cpp  Solution_1_1.cpp  Solution_1_2.cpp  Solution_2_1.cpp  Solution_2_2.cpp  Solution_3_1.cpp  Solution_3_2.cpp  Solution_4_1.cpp  Solution_4_2.cpp  Solution_5_1.cpp  Solution_5_2.cpp  Solution_6_1.cpp  Solution_6_2.cpp  Solution_7_1.cpp  Solution_7_2.cpp  Solution_8_1.cpp  Solution_8_2.cpp  Solution_9_1.cpp  Solution_9_2.cpp
src/solutions/1/: day_1_part_1.cpp  day_1_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/10/: day_10_part_1.cpp  day_10_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/11/: day_11_part_1.cpp  day_11_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/12/: day_12_part_1.cpp  day_12_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/13/: day_13_part_1.cpp  day_13_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/14/: day_14_part_1.cpp  day_14_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/15/: day_15_part_1.cpp  day_15_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/16/: day_16_part_1.cpp  day_16_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/17/: day_17_part_1.cpp  day_17_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/18/: day_18_part_1.cpp  day_18_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/19/: day_19_part_1.cpp  day_19_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/2/: day_2_part_1.cpp  day_2_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/20/: day_20_part_1.cpp  day_20_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/21/: day_21_part_1.cpp  day_21_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/22/: day_22_part_1.cpp  day_22_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/23/: day_23_part_1.cpp  day_23_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/24/: day_24_part_1.cpp  day_24_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/25/: day_25_part_1.cpp  day_25_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/3/: day_3_part_1.cpp  day_3_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/4/: day_4_part_1.cpp  day_4_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/5/: day_5_part_1.cpp  day_5_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/6/: day_6_part_1.cpp  day_6_part_2.cpp  part_1.cpp  part_2.cpp
src/solutions/7/: day_7_part_1.cpp  (+3 more)
src/utils/: Coordinates.cpp  StringSplit.cpp  myMath.cpp
test/: CMakeLists.txt
test/src/: Solution_1_1_test.cpp
test/src/solutions/: Solution_10_1_test.cpp  Solution_10_2_test.cpp  Solution_1_1_test.cpp  Solution_1_2_test.cpp  Solution_2_1_test.cpp  Solution_2_2_test.cpp  Solution_3_1_test.cpp  Solution_3_2_test.cpp  Solution_4_1_test.cpp  Solution_4_2_test.cpp  Solution_5_1_test.cpp  Solution_5_2_test.cpp  Solution_6_1_test.cpp  Solution_6_2_test.cpp  Solution_7_1_test.cpp  Solution_7_2_test.cpp  Solution_8_1_test.cpp  Solution_8_2_test.cpp  Solution_9_1_test.cpp  Solution_9_2_test.cpp  day_10_test.cpp  day_11_test.cpp  day_12_test.cpp  day_13_test.cpp  day_14_test.cpp  day_15_test.cpp  day_16_test.cpp  day_17_test.cpp  day_18_test.cpp  day_19_test.cpp  day_1_test.cpp  day_20_test.cpp  day_21_test.cpp  day_22_test.cpp  day_23_test.cpp  day_24_test.cpp  day_25_test.cpp  day_2_test.cpp  day_3_test.cpp  day_4_test.cpp  (+5 more)
test/src/solutions/1/: Problem_1_part_1_test.cpp  Problem_1_part_2_test.cpp
test/src/solutions/10/: Problem_10_part_1_test.cpp  Problem_10_part_2_test.cpp
test/src/solutions/11/: Problem_11_part_1_test.cpp  Problem_11_part_2_test.cpp
test/src/solutions/12/: Problem_12_part_1_test.cpp  Problem_12_part_2_test.cpp
test/src/solutions/13/: Problem_13_part_1_test.cpp  Problem_13_part_2_test.cpp
test/src/solutions/14/: Problem_14_part_1_test.cpp  Problem_14_part_2_test.cpp
test/src/solutions/15/: Problem_15_part_1_test.cpp  Problem_15_part_2_test.cpp
test/src/solutions/16/: Problem_16_part_1_test.cpp  Problem_16_part_2_test.cpp
test/src/solutions/17/: Problem_17_part_1_test.cpp  Problem_17_part_2_test.cpp
test/src/solutions/18/: Problem_18_part_1_test.cpp  Problem_18_part_2_test.cpp
test/src/solutions/19/: Problem_19_part_1_test.cpp  Problem_19_part_2_test.cpp
test/src/solutions/2/: Problem_2_part_1_test.cpp  Problem_2_part_2_test.cpp
test/src/solutions/20/: Problem_20_part_1_test.cpp  Problem_20_part_2_test.cpp
test/src/solutions/21/: Problem_21_part_1_test.cpp  Problem_21_part_2_test.cpp
test/src/solutions/22/: Problem_22_part_1_test.cpp  Problem_22_part_2_test.cpp
test/src/solutions/23/: Problem_23_part_1_test.cpp  Problem_23_part_2_test.cpp
test/src/solutions/24/: Problem_24_part_1_test.cpp  Problem_24_part_2_test.cpp
test/src/solutions/25/: Problem_25_part_1_test.cpp  Problem_25_part_2_test.cpp
test/src/solutions/3/: Problem_3_part_1_test.cpp  Problem_3_part_2_test.cpp
test/src/solutions/4/: Problem_4_part_1_test.cpp  Problem_4_part_2_test.cpp
test/src/solutions/5/: Problem_5_part_1_test.cpp  Problem_5_part_2_test.cpp
test/src/solutions/6/: Problem_6_part_1_test.cpp  Problem_6_part_2_test.cpp
test/src/solutions/7/: Problem_7_part_1_test.cpp  Problem_7_part_2_test.cpp
test/src/solutions/8/: Problem_8_part_1_test.cpp  Problem_8_part_2_test.cpp
test/src/solutions/9/: Problem_9_part_1_test.cpp  Problem_9_part_2_test.cpp
test/src/utils/: Coordinates_test.cpp  StringSplit_test.cpp  myMath_test.cpp
(+108 files in other folders)
